fixed about section clipping

--- a/css/site.css
+++ b/css/site.css
@@ -82,11 +82,11 @@ body {
     background-color: powderblue;
     text-align: center;
 }
-.contentcontent-wrapper {
+.content-wrapper {
     padding-top: 3.5vw;
     padding-left: 0px;
     padding-right:0px;
-    padding-bottom:0px;
+    padding-bottom:0px
 }
 .content-wrapper-sidebar{
     background-image: url(../Assets/background.jpg);
